background layout bug on mobile #15

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,8 @@
 }
 
 html {
-  height:100%;
-  width:100%
+  height:100vh;
+  width:100vw
 }
 
 /* background image */
